k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookie-territory-app
  namespace: cookie-territory
spec:
  type: ClusterIP
  selector:
    app: cookie-territory-app
  ports:
    - port: 80
      targetPort: 3000
